# chromatic-tda

./: .gitignore  .gitmodules  CITATION.cff  README.md  main.py  manual.ipynb  mypy.ini  pyproject.toml
chromatic_tda/: __init__.py
chromatic_tda/algorithms/: OLD_radius_function_utils.py  chromatic_subcomplex_utils.py  legacy_radius_function_utils.py  miniball.py  miniball_interface.py  persistence_algorithm.py  radius_function.py  radius_function_utils.py  reduce_matrix.py
chromatic_tda/algorithms/test/: test_chromatic_subcomplex.py  test_miniball.py  test_radius_function.py
chromatic_tda/core/: chromatic_alpha_complex_factory.py  core_chromatic_alpha_complex.py  core_simplicial_complex.py  simplicial_complex_factory.py  stack.py
chromatic_tda/core/test/: chromatic_alpha_complex_construction_test.py
chromatic_tda/entities/: boundary_matrix.py  chromatic_alpha_complex.py  external_delaunay.py  simplicial_complex.py
chromatic_tda/entities/test/: complex_test.py  simplicial_complex_construction_test.py
chromatic_tda/epxerimental/: feature_extraction.py
chromatic_tda/experimental/: feature_extraction.py
chromatic_tda/plots/: plotting_functions.py
chromatic_tda/tests/test_data/: one_circle_20_40.json  one_circle_3col_circ_split.json  random2.json
chromatic_tda/utils/: boundary_matrix_utils.py  filter_functions.py  floating_point_utils.py  geometrical_utils.py  geometry_utils.py  linear_algebra_utils.py  persistence_utils.py  simplex_utils.py  simplicial_complex_utils.py  timing.py
chromatic_tda/utils/test/: geometry_test.py  (+1 more)
examples/chromatic_point_clouds/: three_circles_2-colors.json  three_circles_2-colors_background.json  three_circles_3-colors.json
tests/: test_bars.py
tests/test_data/: line_sep.json  one_circle_20_40.json  one_circle_3col_back_split.json  one_circle_3col_bi-circle_tri-filled.json  one_circle_3col_circ_split.json  random.json  random2.json  two_circles.json  two_circles_cc.json
tests/timing/: parallel.py  timing_analysis.py
(+27 files in other folders)
