[tool.poetry]
name = "chromatic_tda"
version = "1.1.7"
description = "Tool to compute six-packs of persistence diagrams for chromatic point clouds"
authors = [
    "Ondrej Draganov <ondrej.draganov@ist.ac.at>",
    "Mohammad Mahini <m.mahini@gmail.com>"
    ]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/OnDraganov/chromatic-tda"
repository = "https://github.com/OnDraganov/chromatic-tda"
documentation = "https://github.com/OnDraganov/chromatic-tda"
packages = [
    {include = "chromatic_tda"}
]
keywords = [
    "tda", "topological data analysis", "chromatic", "chromatic alpha", "delaunay", "persistence", "persistent homology"
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.1"
matplotlib = ">=3.8.0"
scipy = "^1.14"
mypy = "^1.3.0"
typing_extensions = "^4.11.0"
pytest = "^8.1.1"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
